samples/_failures_safe/1761511463_f48486_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6575cae8.c: In function ‘main’:
./samples/SAFE/__tmp_6575cae8.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("No input provided\n");
      |         ^~~~~~
./samples/SAFE/__tmp_6575cae8.c:149:9: error: expected declaration or statement at end of input
